fixed gap and card padding on XL screens

--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,14 @@ body {
     width: 100%;
   }
 }
+
+@media only screen and (min-width: 992px) {
+  .container {
+    max-width: 1100px;
+    gap: 1.8rem;
+  }
+
+  .card {
+    padding: 1.5rem 2.5rem 1rem 1.5rem;
+  }
+}
